--- a/index.html
+++ b/index.html
@@ -1248,10 +1248,10 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   <section class="u-align-center u-black u-clearfix u-container-style u-dialog-block u-opacity u-opacity-65 u-valign-middle u-dialog-section-10" id="carousel_73c0" data-dialog-show-on="timer" data-dialog-show-interval="1000" data-dialog-show-on-list="88446313">
       <div class="u-align-center u-black u-border-2 u-border-custom-color-4 u-container-style u-dialog u-radius-8 u-shape-round u-dialog-1">
         <div class="u-container-layout u-container-layout-1">
-          <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-custom-color-4 u-text-default u-text-1">This is the last update for 1.0</h2>
-          <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-custom-color-4 u-text-default u-text-2">The New Beta is here</h2>
-          <p class="u-align-center u-text u-text-default u-text-3">Try The Beta, This Native is going away soon</p>
-          <a href="https://beta.nativegames.net" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-4 u-hover-custom-color-5 u-radius-3 u-text-body-alt-color u-text-hover-white u-btn-1">Try</a>
+          <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-custom-color-4 u-text-default u-text-1">ad space available here</h2>
+          <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-custom-color-4 u-text-default u-text-2">please dont play games instead of do classwork</h2>
+          <p class="u-align-center u-text u-text-default u-text-3">Peter Griffin Games cannot be held accountable for students being off task. Continuing to use this website assumes responsibility for any punishment arising from usage of this website.</p>
+          <a href="https://google.com" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-4 u-hover-custom-color-5 u-radius-3 u-text-body-alt-color u-text-hover-white u-btn-1">Press to launch google</a>
         </div><button class="u-dialog-close-button u-icon u-text-body-alt-color u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 413.348 413.348" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-cdad"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 413.348 413.348" id="svg-cdad"><path d="m413.348 24.354-24.354-24.354-182.32 182.32-182.32-182.32-24.354 24.354 182.32 182.32-182.32 182.32 24.354 24.354 182.32-182.32 182.32 182.32 24.354-24.354-182.32-182.32z"></path></svg></button>
       </div>
     </section><style>.u-dialog-section-10 .u-dialog-1 {
