--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Created With ❤️ At Parcoil Inc">
+    <meta name="keywords" content="Peter Griffin">
     <meta name="description" content="">
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -1244,16 +1244,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </form>
         </div>
       </div></footer>
-<span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 0px;" class="u-back-to-top u-file-icon u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base" data-href="#"><img src="images/892692.png" alt=""></span>
-  <section class="u-align-center u-black u-clearfix u-container-style u-dialog-block u-opacity u-opacity-65 u-valign-middle u-dialog-section-10" id="carousel_73c0" data-dialog-show-on="timer" data-dialog-show-interval="1000" data-dialog-show-on-list="88446313">
-      <div class="u-align-center u-black u-border-2 u-border-custom-color-4 u-container-style u-dialog u-radius-8 u-shape-round u-dialog-1">
-        <div class="u-container-layout u-container-layout-1">
-          <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-custom-color-4 u-text-default u-text-1">ad space available here</h2>
-          <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-custom-color-4 u-text-default u-text-2">please do not play games instead of doing classwork</h2>
-          <p class="u-align-center u-text u-text-default u-text-3">Peter Griffin Games cannot be held accountable for students being off task. Continuing to use this website assumes responsibility for any punishment arising from usage of this website.</p>
-          <a href="https://google.com" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-4 u-hover-custom-color-5 u-radius-3 u-text-body-alt-color u-text-hover-white u-btn-1">Press to leave games and launch google.com</a>
-        </div><button class="u-dialog-close-button u-icon u-text-body-alt-color u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 413.348 413.348" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-cdad"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 413.348 413.348" id="svg-cdad"><path d="m413.348 24.354-24.354-24.354-182.32 182.32-182.32-182.32-24.354 24.354 182.32 182.32-182.32 182.32 24.354 24.354 182.32-182.32 182.32 182.32 24.354-24.354-182.32-182.32z"></path></svg></button>
-      </div>
+
     </section><style>.u-dialog-section-10 .u-dialog-1 {
   width: 566px;
   min-height: 434px;
